# churses

./: CMakeLists.txt  a.out
src/: main.cpp  test.cpp
